--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@giscus/react": "^3.1.0",
     "@google-analytics/data": "^5.1.0",
+    "@heroicons/react": "^2.2.0",
     "@notionpresso/react": "^0.0.5",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
